# arkai

./: .gitignore  2026-01-28-directory-tree-audit.md  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  run_log.md
.claude/: CLAUDE.md  README.md
.githooks/: pre-commit
.ralph/memory/: constraints.md  rolling_summary.md
.ralph/templates/: bootstrap.md  distill_prompt.md
.steelman/: consensus_log.md  last_session
ai_docs/architecture/: overview.md
arkai-spec-bootstrap-v3/backlog/: WORK_ORDERS.md
arkai-spec-bootstrap-v3/spec/: ALIGNMENT.md  CI_NOTES.md  README.md  SAFE_CARD_TEMPLATE.yaml  SYSTEM_MAP.md
assets/asset_gen_prompts/: banner_prompts.txt
contracts/: README.md  acceptance_criterion.schema.json  calendar_daemon_contract.json  critic_evidence_bundle.schema.json  email_daemon_contract.json  email_triage.schema.json  queue_task_adr.md  queue_task_contract.json  validate_calendar_output.py  validate_daemon_output.py  validate_queue_task.py  validation_result.schema.json  voice_intake.schema.json  voice_request.schema.json  voice_result.schema.json
contracts/fixtures/: calendar_daemon_cancelled.json  calendar_daemon_invalid.expected  calendar_daemon_invalid.json  calendar_daemon_recurring.json  calendar_daemon_sample.json  email_daemon_invalid.expected  email_daemon_invalid.json  email_daemon_sample.json  queue_task_request_invalid.expected  queue_task_request_invalid.json  queue_task_request_valid.json  queue_task_state_done.json  queue_task_state_expired_lease.json
docs/: AIOS_BRIEF.md  AI_OS_ARCHITECTURE.md  ARCHITECTURE.md  ARKAI_GMAIL_DESIGN.md  ARKAI_VOICE_CAPTURE_DESIGN.md  CONTEXT.md  LINKEDIN_PITCHES.md  PITCH.md  RALPH_DESIGN.md  RLM_INTEGRATION.md  ROADMAP.md  SECURITY_POSTURE.md  THREADS.md
docs/ai/: ARKAI_V1_BUILD_SPEC.md  README.md
patterns/detect_discrepancies/: system.md
patterns/extract_claims/: system.md
patterns/extract_entities/: system.md
pipelines/: hello.yaml  recursive-verify.yaml  test-shell.yaml  web-wisdom.yaml  why-you-care.yaml  youtube-wisdom.yaml
scout_outputs/: ARCHITECTURE_CLARITY.md  FABRIC_LLM_EXPLAINED.md  REPO_TREE_2026-01-21.md  SESSION_2_SUMMARY.md  SESSION_3_SUMMARY.md  SESSION_4_SUMMARY.md  SESSION_5_SUMMARY.md  SESSION_6_RLM_INTEGRATION.md  SESSION_SUMMARY.md  STORAGE_ARCHITECTURE.md
scripts/: ralph  render_transcript.py  rlm_smoke_test_a.md  rlm_smoke_test_b.md  smoke_voice.sh  verify_ai_docs.sh
services/inbox/: README.md  pyproject.toml
services/inbox/src/arkai_inbox/: __init__.py  audit.py  models.py  normalize.py  quarantine.py  url_extractor.py
services/inbox/src/arkai_inbox/cli/: obsidian.py  triage.py
services/inbox/src/arkai_inbox/ingestion/: __init__.py  gmail.py  gmail_client.py
services/inbox/tests/: test_ingestion.py  test_normalize.py  test_quarantine.py  test_url_extractor.py
services/inbox/tests/fixtures/: README.md
services/inbox/tests/fixtures/linkedin_real/: msg1.json  msg2.json  msg3.json  msg4.json  msg5.json
services/inbox/tests/fixtures/linkedin_spoof/: spoof_link_mismatch.json  spoof_reply_to.json
src/: config.rs  lib.rs  main.rs
src/cli/: capture.rs  (+4 more)
tests/: event_store.rs  idempotency.rs  safety.rs  timeout.rs
tts/: __init__.py  arkai-tts  cli.py  elevenlabs_client.py  pyproject.toml  requirements.txt  test_integration.py
(+164 files in other folders)
