[package]
name = "arkai"
version = "0.1.0"
edition = "2021"
description = "Event-sourced AI pipeline orchestrator using Fabric"
authors = ["Alex Kamysz"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
sha2 = "0.10"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
hex = "0.4.3"
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "arkai"
path = "src/main.rs"

[lib]
name = "arkai"
path = "src/lib.rs"
