[package]
name = "arkai"
version = "0.1.0"
edition = "2021"
description = "Event-sourced AI pipeline orchestrator using Fabric"
authors = ["Alex Kamysz"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
sha2 = "0.10"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
hex = "0.4.3"
fs2 = "0.4.3"
notify = "6"
notify-debouncer-mini = "0.4"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"
filetime = "0.2"  # For backdating file mtimes in tests

[[bin]]
name = "arkai"
path = "src/main.rs"

[lib]
name = "arkai"
path = "src/lib.rs"
